--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="prostatricum, cura per la prostatite, ">
 	<meta name="description" content="Un rimedio per la prevenzione e il trattamento della prostatite. I componenti di Prostatricum hanno un effetto complesso sulla prostata. L’erezione viene ripristinata, la minzione diventa sana, il rischio di sviluppare adenoma prostatico viene ridotto al minimo">
     <title>Prostatricum. Rimedio per la prostatite</title>    
-    
+    <meta name="google-site-verification" content="h78SbMRCb7SWGRSOSNIIPHsItN3x_-7C3CLH_t-aANc" />
     <link rel="shortcut.icon" type="image/png" href="img/cystinorm.png" sizes="16x16">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" type="text/css"> 
@@ -392,7 +392,7 @@ La composizione di Prostatricum parla da sé. E’ un prodotto assolutamente sic
               </div>
             </div>
 
-            <form action="order.php" method="POST" class="wv_order-form">
+            <form action="https://finish.vitalityfusion.online/it-prostatricum/order.php" method="POST" class="wv_order-form">
 
               <select id="country" name="country" class="country_select">
                 <option value="it" selected>Italia</option>
@@ -636,7 +636,7 @@ La composizione di Prostatricum parla da sé. E’ un prodotto assolutamente sic
 <script defer src="./js/wv_shopwindow.js"></script>
 <script src="js/form-validator.js"></script>
 
-
+<!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]function(){(m[i].a=m[i].a[]).push(arguments)}; m[i].l=1*new Date(); for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }} k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(92887857, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/92887857" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 
 
     
